Dodanie obsluge wyjatkow dla serwisow

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
 token.signing.key = BC3C1A2EA899958F2A5C96689AC9B
+
+server.error.include-message=always
