--- a/library-frontend/package.json
+++ b/library-frontend/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "axios": "^1.7.2",
     "formik": "^2.4.5",
     "mui": "^0.0.1",
     "react": "^18.3.1",
