--- a/library-frontend/package.json
+++ b/library-frontend/package.json
@@ -18,11 +18,14 @@
     "@types/react-dom": "^18.2.25",
     "@types/react-i18next": "^8.1.0",
     "axios": "^1.7.2",
+    "eslint-config-prettier": "^9.1.0",
     "formik": "^2.4.5",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.394.0",
     "mui": "^0.0.1",
+    "prettier-plugin-tailwindcss": "^0.6.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2",
@@ -59,7 +62,7 @@
   "devDependencies": {
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.2",
     "tailwindcss": "^3.4.3"
   }
 }
