--- a/library-frontend/package.json
+++ b/library-frontend/package.json
@@ -27,10 +27,12 @@
     "mui": "^0.0.1",
     "prettier-plugin-tailwindcss": "^0.6.4",
     "react": "^18.3.1",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
